--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@
             <div class="container">
                 <div class="row text-center">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 style="color:#fff" class="header-line">github:@ccmind</h1> ----------------------------
-                        <h3><strong>5/90 </strong>Beijing</h3>
+                        <h1 style="color:#fff" class="header-line">@ccmind</h1> ----------------------------
+                        <h3>Beijing</h3>
                         <h3>QQ:150604030</h3>
-                        <h3>邮箱:wangchao.see@gmail.com</h3>
+                        <h3>V:chao_wang2012</h3>
                         <br />
                         <div class="social-link">
                             <a href="#">
